--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.matuageorge.integration_with_native">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
    <application
         android:label="integration_with_native"
         android:name="${applicationName}"
